// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser Grid Block should render OneColumn 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <article
      class="emotion-2 emotion-3"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          >
            <time
              class="emotion-21 emotion-22"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="emotion-23 emotion-3"
      x="0"
      y="1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
    <article
      class="emotion-42 emotion-3"
      x="0"
      y="2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-51 emotion-52"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render ThreeColumns 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <article
      class="emotion-2 emotion-3"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          >
            <time
              class="emotion-21 emotion-22"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="emotion-23 emotion-3"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
    <article
      class="emotion-42 emotion-3"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-51 emotion-52"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
  >
    <article
      class="emotion-2 emotion-3"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          >
            <time
              class="emotion-21 emotion-22"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="emotion-23 emotion-3"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
    <article
      class="emotion-42 emotion-3"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-51 emotion-52"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <article
      class="emotion-2 emotion-3"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          >
            <time
              class="emotion-21 emotion-22"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023 
            </time>
          </div>
        </div>
      </a>
    </article>
    <article
      class="emotion-23 emotion-3"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-13 emotion-14"
            >
              Pre Title
            </div>
          </div>
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
    <article
      class="emotion-42 emotion-3"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-4"
        href="https://example.com"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <img
              alt="An image description"
              class="emotion-9 emotion-10"
              loading="lazy"
              sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="An image title"
            />
          </div>
          <div
            class="emotion-51 emotion-52"
          />
          <h1
            class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
          >
            Teambesprechung vom 23.05.
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
          >
            Lead
          </p>
          <div
            class="emotion-19 emotion-20"
          />
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;
